--- a/css/global.css
+++ b/css/global.css
@@ -64,21 +64,20 @@ a {
 .headcont {
   background-color: #927e7e;
   color: #fff;
-  position: fixed;
+  position: relative;
   height: 136px;
   width: 100%;
   padding: 61px 50px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: absolute;
 }
 .headcont a {
   color: #000;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 20px;
+  font-size: 25px;
   font-weight: 400;
-  margin-left: 25px;
+  margin-left: 30px;
 }
 .headcont .LOGO123 {
   width: 35%;
@@ -89,35 +88,163 @@ a {
 }
 
 section .mountains {
-  background-image: url(/mountainsN2.png);
-  height: 999px;
-  width: 100%;
+  height: 806PX;
+  background-image: url("/tbilisi-back.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-}
-
-.mountains {
-  background-color: rgb(249, 234, 219);
-  animation: transitionIn 0.75s;
-}
-
-@keyframes transitionIn {
-  from {
-    opacity: 0;
-    transform: translateX(200px);
-  }
-  to {
-    opacity: 1;
-    transform: rotateY(0);
-  }
-}
-.mountains-conteiner {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+section .mountains h2 {
+  font-size: 79px;
+  font-weight: 700;
+  margin-bottom: 31px;
+  justify-content: center;
   align-items: center;
   color: #FFF;
+}
+section .mountains p {
+  font-size: 26px;
+  color: #FFF;
+}
+section .mountains a {
+  margin: 40px;
+  width: 200px;
+  height: 68px;
+  background-color: rgba(187, 116, 24, 0.856);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #FFF;
+  font-size: 26px;
+  border-radius: 8px;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container .line {
+  margin-top: 98px;
+  gap: 13px;
+}
+.container .line .leftline {
+  height: 1px;
+  width: 253px;
+  background-color: #000;
+}
+.container .line .rightline {
+  height: 1px;
+  width: 253px;
+  background-color: #000;
+}
+.container .line h2 {
+  color: #000;
+  font-family: georgia;
+  font-size: 36px;
+  font-weight: 400;
+}
+.container .boxx {
+  width: 324px;
+  height: 324px;
+}
+
+.SinginN1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: url(/photos/Georgian_Fortress_Ananuri.jpg) no-repeat;
+}
+.SinginN1 .wrapper {
+  width: 420px;
+  background: rgb(5, 107, 10);
+  color: #fff;
+  border-radius: 10px;
+  padding: 30px 40px;
+}
+.SinginN1 .wrapper h1 {
+  font-size: 36px;
   text-align: center;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 70px;
-  font-weight: 700;
+}
+.SinginN1 .wrapper .input-box {
+  position: relative;
+  width: 100%;
+  height: 50px;
+  margin: 30px 0;
+}
+.SinginN1 .wrapper .input-box i {
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 20px;
+}
+.SinginN1 .wrapper .input-box input {
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  border: none;
+  outline: none;
+  border: 2px solid rgba(255, 255, 255, 0.2);
+  border-radius: 40px;
+  font-size: 16px;
+  color: #fff;
+  padding: 20px 45px 20px 20px;
+}
+.SinginN1 .wrapper .remember-forgot {
+  display: flex;
+  justify-content: space-between;
+  font-size: 14.5px;
+  margin: -15px 0 15px;
+}
+.SinginN1 .wrapper .remember-forgot label input {
+  accent-color: #fff;
+  margin-right: 3px;
+}
+.SinginN1 .wrapper .remember-forgot a {
+  color: #fff;
+  text-decoration: none;
+}
+.SinginN1 .wrapper .btn {
+  width: 100%;
+  height: 45px;
+  background: #fff;
+  border: none;
+  outline: none;
+  border-radius: 40px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  font-size: 16px;
+  color: #333;
+  font-weight: 600;
+}
+.SinginN1 .wrapper .register-link {
+  font-size: 14.5px;
+  text-align: center;
+  margin: 20px 0 15px;
+}
+.SinginN1 .wrapper .register-link p a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: 600;
+}
+
+.input-box input::-moz-placeholder {
+  color: #fff;
+}
+
+.input-box input::placeholder {
+  color: #fff;
+}
+
+.remember-forgot a:hover {
+  text-decoration: underline;
+}
+
+.register-link p a:hover {
+  text-decoration: underline;
 }/*# sourceMappingURL=global.css.map */
