--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,20 +3,19 @@
 .headcont {
     background-color: #927e7e;
     color: #fff;
-    position: fixed;
+    position: relative;
     height: 136px;
     width: 100%;
     padding: 61px 50px;
     display: flex;
     justify-content: space-between;
     align-items: center; 
-    position: absolute;
             a {
                 color: #000;
                 font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-                font-size: 20px;
+                font-size: 25px;
                 font-weight: 400;
-                margin-left: 25px;
+                margin-left: 30px;
             }
             .LOGO123 {
                 width: 35%;
@@ -28,34 +27,66 @@
 }
 section {
     .mountains {
-        background-image: url(/mountainsN2.png);
-        height: 999px;
-        width: 100%;
-        background-size: cover;
-        background-repeat: no-repeat;
+      height: 806PX;
+      background-image: url("/tbilisi-back.jpg");
+      background-size: cover;
+      background-repeat: no-repeat;
+      display: flex; 
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      h2 {
+        font-size: 79px;
+        font-weight: 700;
+        margin-bottom: 31px;
+        justify-content: center;
+        align-items: center;
+        color: #FFF;
+      }
+            p {
+              font-size: 26px;
+              color: #FFF;
+                  }
+                  a {
+                    margin: 40px;
+                    width: 200px;
+                    height: 68px;
+                    background-color: rgba(187, 116, 24, 0.856);
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    color: #FFF;
+                    font-size: 26px;
+                    border-radius: 8px;
+                  }
+  }
+}
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+    .line {
+      margin-top: 98px;
+      gap: 13px;
+      .leftline {
+        height: 1px;
+        width: 253px;
+        background-color: #000;
+      }
+      .rightline {
+        height: 1px;
+        width: 253px;
+        background-color: #000;
+      }
+      h2 {
+        color: #000;
+        font-family: georgia;
+        font-size: 36px;
+        font-weight: 400;
+      }
+    }
+    .boxx {
+      width: 324px;
+      height: 324px;
     }
 }
-.mountains {
-    background-color: rgb(249, 234, 219);
-    animation: transitionIn 0.75s;
-  }
-  @keyframes transitionIn {
-    from {
-      opacity: 0;
-      transform: translateX(200px);
-    }
-    to {
-      opacity: 1;
-      transform: rotateY(0);
-    }
-  }
-  .mountains-conteiner {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: #FFF;
-    text-align: center;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 70px;
-    font-weight: 700;
-  }
