--- a/scss/Singin.scss
+++ b/scss/Singin.scss
@@ -4,9 +4,14 @@
     align-items: center;
     min-height: 100vh;
     background: url(/photos/Georgian_Fortress_Ananuri.jpg) no-repeat;
+    background-size: cover;
+    background-position: cover;
     .wrapper {
         width: 420px;
-        background: rgb(5, 107, 10);
+        background: transparent;
+        border: 2px solid rgba(255, 255, 255, .2);
+        backdrop-filter: blur(20px);
+        box-shadow: 0 0 10px rgba(0, 0, 0, .2);
         color: #fff;
         border-radius: 10px;
         padding: 30px 40px;
