--- a/scss/global.scss
+++ b/scss/global.scss
@@ -1,4 +1,5 @@
-@import "reset.scss";
-@import "mixins.scss";
+@import "_reset.scss";
+@import "_mixins.scss";
 @import "style.scss";
 @import "Singin.scss";
+@import "page3.scss";
