--- a/css/Singin.css
+++ b/css/Singin.css
@@ -52,6 +52,7 @@
   justify-content: space-between;
   font-size: 14.5px;
   margin: -15px 0 15px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .SinginN1 .wrapper .remember-forgot label input {
   accent-color: #fff;
@@ -79,10 +80,17 @@
   text-align: center;
   margin: 20px 0 15px;
 }
-.SinginN1 .wrapper .register-link p a {
+.SinginN1 .wrapper .register-link p {
   color: #fff;
   text-decoration: none;
   font-weight: 600;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.SinginN1 .wrapper .register-link a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: 600;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .input-box input::-moz-placeholder {
