--- a/css/global.css
+++ b/css/global.css
@@ -126,10 +126,14 @@ section .mountains a {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 .container .line {
+  display: flex;
   margin-top: 98px;
   gap: 13px;
+  align-items: center;
+  margin-bottom: 102px;
 }
 .container .line .leftline {
   height: 1px;
@@ -148,8 +152,59 @@ section .mountains a {
   font-weight: 400;
 }
 .container .boxx {
+  gap: 45px;
+  display: flex;
+  justify-content: center;
+}
+.container .boxx img {
   width: 324px;
   height: 324px;
+  display: flex;
+}
+.container .boxx h3 {
+  display: flex;
+  justify-content: center;
+  margin-top: 27px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 32px;
+  font-weight: 400;
+}
+
+footer {
+  width: 100%;
+  height: 430px;
+  background: #E4E4E4;
+}
+footer .left {
+  padding-left: 54px;
+  padding-top: 35px;
+  padding-bottom: 24px;
+}
+footer .left img {
+  margin-bottom: 44px;
+}
+footer .left ul li {
+  color: #000;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  margin-bottom: 17px;
+}
+footer .left .Geo {
+  display: flex;
+  gap: 14px;
+  margin-top: 50px;
+  align-items: center;
+}
+footer .left .Geo i {
+  font-size: 28px;
+}
+footer .left .Geo p {
+  color: #000;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  margin-top: 5px;
 }
 
 .SinginN1 {
@@ -206,6 +261,7 @@ section .mountains a {
   justify-content: space-between;
   font-size: 14.5px;
   margin: -15px 0 15px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .SinginN1 .wrapper .remember-forgot label input {
   accent-color: #fff;
@@ -233,10 +289,17 @@ section .mountains a {
   text-align: center;
   margin: 20px 0 15px;
 }
-.SinginN1 .wrapper .register-link p a {
+.SinginN1 .wrapper .register-link p {
   color: #fff;
   text-decoration: none;
   font-weight: 600;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.SinginN1 .wrapper .register-link a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: 600;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .input-box input::-moz-placeholder {
@@ -253,4 +316,82 @@ section .mountains a {
 
 .register-link p a:hover {
   text-decoration: underline;
+}
+
+.boxx2 {
+  display: flex;
+}
+.boxx2 .backbox {
+  height: 655px;
+  background-image: url("/photos/skiing-bakuriani.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  display: flex;
+}
+.boxx2 .backbox h2 {
+  font-size: 79px;
+  font-weight: 700;
+  margin-bottom: 31px;
+  justify-content: center;
+  align-items: center;
+  color: #000000;
+}
+.boxx2 .backbox p {
+  font-size: 26px;
+  color: #000000;
+}
+
+.container .boxxx1 {
+  gap: 45px;
+  display: flex;
+  justify-content: center;
+}
+.container .boxxx1 img {
+  width: 324px;
+  height: 324px;
+  display: flex;
+}
+.container .boxxx1 h3 {
+  display: flex;
+  justify-content: center;
+  margin-top: 27px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 32px;
+  font-weight: 400;
+}
+.container .boxxx1 p {
+  display: flex;
+  justify-content: center;
+  font-size: 23px;
+  font-weight: 400;
+  margin-top: 10px;
+}
+.container .boxxx2 {
+  gap: 45px;
+  display: flex;
+  justify-content: center;
+}
+.container .boxxx2 img {
+  width: 324px;
+  height: 324px;
+  display: flex;
+}
+.container .boxxx2 h3 {
+  display: flex;
+  justify-content: center;
+  margin-top: 27px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 32px;
+  font-weight: 400;
+}
+.container .boxxx2 p {
+  display: flex;
+  justify-content: center;
+  font-size: 23px;
+  font-weight: 400;
+  margin-top: 10px;
 }/*# sourceMappingURL=global.css.map */
