--- a/css/style.css
+++ b/css/style.css
@@ -64,10 +64,14 @@ section .mountains a {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 .container .line {
+  display: flex;
   margin-top: 98px;
   gap: 13px;
+  align-items: center;
+  margin-bottom: 102px;
 }
 .container .line .leftline {
   height: 1px;
@@ -86,6 +90,57 @@ section .mountains a {
   font-weight: 400;
 }
 .container .boxx {
+  gap: 45px;
+  display: flex;
+  justify-content: center;
+}
+.container .boxx img {
   width: 324px;
   height: 324px;
+  display: flex;
+}
+.container .boxx h3 {
+  display: flex;
+  justify-content: center;
+  margin-top: 27px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 32px;
+  font-weight: 400;
+}
+
+footer {
+  width: 100%;
+  height: 430px;
+  background: #E4E4E4;
+}
+footer .left {
+  padding-left: 54px;
+  padding-top: 35px;
+  padding-bottom: 24px;
+}
+footer .left img {
+  margin-bottom: 44px;
+}
+footer .left ul li {
+  color: #000;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  margin-bottom: 17px;
+}
+footer .left .Geo {
+  display: flex;
+  gap: 14px;
+  margin-top: 50px;
+  align-items: center;
+}
+footer .left .Geo i {
+  font-size: 28px;
+}
+footer .left .Geo p {
+  color: #000;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  margin-top: 5px;
 }/*# sourceMappingURL=style.css.map */
