--- a/scss/Singin.scss
+++ b/scss/Singin.scss
@@ -49,6 +49,7 @@
             justify-content: space-between;
             font-size: 14.5px;
             margin: -15px 0 15px;
+            font-family: Arial, Helvetica, sans-serif;
             label input {
                 accent-color: #fff;
                 margin-right: 3px;
@@ -75,10 +76,17 @@
             font-size: 14.5px;
             text-align: center;
             margin: 20px 0 15px;
-            p a {
+            p {
                 color: #fff;
                 text-decoration: none;
                 font-weight: 600;
+                font-family: Arial, Helvetica, sans-serif;
+            }
+            a {
+                color: #fff;
+                text-decoration: none;
+                font-weight: 600;
+                font-family: Arial, Helvetica, sans-serif;
             }
         }
     }
