--- a/scss/style.scss
+++ b/scss/style.scss
@@ -43,31 +43,35 @@ section {
         align-items: center;
         color: #FFF;
       }
-            p {
-              font-size: 26px;
-              color: #FFF;
-                  }
-                  a {
-                    margin: 40px;
-                    width: 200px;
-                    height: 68px;
-                    background-color: rgba(187, 116, 24, 0.856);
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    color: #FFF;
-                    font-size: 26px;
-                    border-radius: 8px;
-                  }
+      p {
+        font-size: 26px;
+        color: #FFF;
+      }
+      a {
+        margin: 40px;
+        width: 200px;
+        height: 68px;
+        background-color: rgba(187, 116, 24, 0.856);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: #FFF;
+        font-size: 26px;
+        border-radius: 8px;
+      }
   }
 }
 .container {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
     .line {
+      display: flex;
       margin-top: 98px;
       gap: 13px;
+      align-items: center;
+      margin-bottom: 102px;
       .leftline {
         height: 1px;
         width: 253px;
@@ -86,7 +90,60 @@ section {
       }
     }
     .boxx {
-      width: 324px;
-      height: 324px;
+      gap: 45px;
+      display: flex;
+      justify-content: center;
+      img {
+        width: 324px;
+        height: 324px;
+        display: flex;
+      }
+      h3 {
+        display: flex;
+        justify-content: center;
+        margin-top: 27px;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        font-size: 32px;
+        font-weight: 400;
+      }
     }
+}
+footer {
+  width: 100%;
+  height: 430px;
+  background: #E4E4E4;
+  .left {
+    padding-left: 54px;
+    padding-top: 35px;
+    padding-bottom: 24px;
+    img {
+      margin-bottom: 44px;
+    }
+    ul {
+      
+      li {
+        color: #000;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 20px;
+        font-weight: 400;
+        margin-bottom: 17px;
+      }
+    }
+    .Geo {
+      display: flex;
+      gap: 14px;
+      margin-top: 50px;
+      align-items: center;
+      i {
+        font-size: 28px;
+      }
+      p {
+        color: #000;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 18px;
+        font-weight: 400;
+        margin-top: 5px;
+      }
+    }
+  }
 }
