--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Roboto:wght@100;300;400;500;700;900&display=swap");
 .headcont {
   background-color: #927e7e;
   color: #fff;
@@ -110,11 +111,12 @@ section .mountains a {
 
 footer {
   width: 100%;
-  height: 430px;
+  height: 400px;
   background: #E4E4E4;
+  display: flex;
 }
 footer .left {
-  padding-left: 54px;
+  padding-left: 24px;
   padding-top: 35px;
   padding-bottom: 24px;
 }
@@ -143,4 +145,88 @@ footer .left .Geo p {
   font-size: 18px;
   font-weight: 400;
   margin-top: 5px;
+}
+
+.help {
+  margin-left: 201px;
+}
+.help h3 {
+  color: #000;
+  font-family: Kaushan Script;
+  font-size: 25px;
+  font-weight: 400;
+  margin-top: 61px;
+}
+.help .line {
+  width: 173.003px;
+  height: 1px;
+  background: #000;
+  margin-top: 4.5px;
+  margin-bottom: 32.5px;
+}
+.help ul li {
+  color: #000;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  margin-bottom: 17px;
+}
+
+.cont {
+  margin-left: 80px;
+}
+.cont h3 {
+  color: #000;
+  font-family: Kaushan Script;
+  font-size: 25px;
+  font-weight: 400;
+  margin-top: 61px;
+}
+.cont .line {
+  width: 173.003px;
+  height: 1px;
+  background: #000;
+  margin-top: 4.5px;
+  margin-bottom: 32.5px;
+}
+.cont ul li {
+  color: #000;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  margin-bottom: 17px;
+}
+
+.searchbox {
+  padding-top: 350px;
+  padding-left: 0px;
+}
+.searchbox .search {
+  height: 30px;
+  display: flex;
+  cursor: pointer;
+  padding: 10px 20px;
+  background: #fff;
+  border-radius: 30px;
+  align-items: center;
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
+}
+.searchbox .search input {
+  width: 0;
+  outline: none;
+  border: none;
+  font-weight: 500;
+  transform: 0.8s;
+  background: transparent;
+}
+.searchbox .search a .fas {
+  color: aqua;
+  font-size: 18px;
+}
+.searchbox .search:hover input {
+  width: 300px;
+}
+
+footer {
+  margin-top: 100px;
 }/*# sourceMappingURL=style.css.map */
