--- a/scss/global.scss
+++ b/scss/global.scss
@@ -3,3 +3,6 @@
 @import "style.scss";
 @import "Singin.scss";
 @import "page3.scss";
+@import "pageGTCH.scss";
+@import "pageBKR.scss";
+@import "pagePTV.scss";
