--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,64 +1,66 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Roboto:wght@100;300;400;500;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Roboto:wght@100;300;400;500;700;900&display=swap");
 .headcont {
-    background-color: #927e7e;
-    color: #fff;
-    position: relative;
-    height: 136px;
-    width: 100%;
-    padding: 61px 50px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center; 
-            a {
-                color: #000;
-                font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-                font-size: 25px;
-                font-weight: 400;
-                margin-left: 30px;
-            }
-            .LOGO123 {
-                width: 35%;
-            }
-            .icon1 {
-                color: #000;
-                font-size: 25px;
-            }
+  background-color: #927e7e;
+  color: #fff;
+  position: relative;
+  height: 136px;
+  width: 100%;
+  padding: 61px 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  a {
+    color: #000;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+      sans-serif;
+    font-size: 25px;
+    font-weight: 400;
+    margin-left: 30px;
+  }
+  .LOGO123 {
+    width: 35%;
+  }
+  .icon1 {
+    color: #000;
+    font-size: 25px;
+  }
 }
 section {
-    .mountains {
-      height: 806PX;
-      background-image: url("/tbilisi-back.jpg");
-      background-size: cover;
-      background-repeat: no-repeat;
-      display: flex; 
+  .mountains {
+    height: 806px;
+    background-image: url("/tbilisi-back.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    h2 {
+      font-size: 79px;
+      font-weight: 700;
+      margin-bottom: 31px;
       justify-content: center;
       align-items: center;
-      flex-direction: column;
-      h2 {
-        font-size: 79px;
-        font-weight: 700;
-        margin-bottom: 31px;
-        justify-content: center;
-        align-items: center;
-        color: #FFF;
-      }
-      p {
-        font-size: 26px;
-        color: #FFF;
-      }
-      a {
-        margin: 40px;
-        width: 200px;
-        height: 68px;
-        background-color: rgba(187, 116, 24, 0.856);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: #FFF;
-        font-size: 26px;
-        border-radius: 8px;
-      }
+      color: #fff;
+    }
+    p {
+      font-size: 26px;
+      color: #fff;
+    }
+    a {
+      margin: 40px;
+      width: 200px;
+      height: 68px;
+      background-color: rgba(187, 116, 24, 0.856);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #fff;
+      font-size: 26px;
+      border-radius: 8px;
+    }
   }
 }
 .container {
@@ -66,52 +68,52 @@ section {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-    .line {
-      display: flex;
-      margin-top: 98px;
-      gap: 13px;
-      align-items: center;
-      margin-bottom: 102px;
-      .leftline {
-        height: 1px;
-        width: 253px;
-        background-color: #000;
-      }
-      .rightline {
-        height: 1px;
-        width: 253px;
-        background-color: #000;
-      }
-      h2 {
-        color: #000;
-        font-family: georgia;
-        font-size: 36px;
-        font-weight: 400;
-      }
+  .line {
+    display: flex;
+    margin-top: 98px;
+    gap: 13px;
+    align-items: center;
+    margin-bottom: 102px;
+    .leftline {
+      height: 1px;
+      width: 253px;
+      background-color: #000;
     }
-    .boxx {
-      gap: 45px;
+    .rightline {
+      height: 1px;
+      width: 253px;
+      background-color: #000;
+    }
+    h2 {
+      color: #000;
+      font-family: georgia;
+      font-size: 36px;
+      font-weight: 400;
+    }
+  }
+  .boxx {
+    gap: 45px;
+    display: flex;
+    justify-content: center;
+    img {
+      width: 324px;
+      height: 324px;
+      display: flex;
+    }
+    h3 {
       display: flex;
       justify-content: center;
-      img {
-        width: 324px;
-        height: 324px;
-        display: flex;
-      }
-      h3 {
-        display: flex;
-        justify-content: center;
-        margin-top: 27px;
-        font-family: Georgia, 'Times New Roman', Times, serif;
-        font-size: 32px;
-        font-weight: 400;
-      }
+      margin-top: 27px;
+      font-family: Georgia, "Times New Roman", Times, serif;
+      font-size: 32px;
+      font-weight: 400;
     }
+  }
 }
 footer {
   width: 100%;
   height: 400px;
-  background: #E4E4E4;
+  background: #e4e4e4;
   display: flex;
   .left {
     padding-left: 24px;
@@ -164,7 +166,7 @@ footer {
     margin-bottom: 32.5px;
   }
   ul {
-    li{
+    li {
       color: #000;
       font-family: Arial, Helvetica, sans-serif;
       font-size: 20px;
@@ -191,7 +193,7 @@ footer {
     margin-bottom: 32.5px;
   }
   ul {
-    li{
+    li {
       color: #000;
       font-family: Arial, Helvetica, sans-serif;
       font-size: 20px;
@@ -221,7 +223,7 @@ footer {
       background: transparent;
     }
     a {
-      .fas{
+      .fas {
         color: aqua;
         font-size: 18px;
       }
