--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@
 
 section .mountains {
   height: 806px;
-  background-image: url("/tbilisi-back.jpg");
+  background-image: url("/photos/tbilisi-back.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   display: flex;
