--- a/scss/global.scss
+++ b/scss/global.scss
@@ -1,8 +1,8 @@
 @import "_reset.scss";
 @import "_mixins.scss";
-@import "style.scss";
-@import "Singin.scss";
-@import "page3.scss";
-@import "pageGTCH.scss";
-@import "pageBKR.scss";
-@import "pagePTV.scss";
+@import "_style.scss";
+@import "_Singin.scss";
+@import "_page3.scss";
+@import "_pageGTCH.scss";
+@import "_pageBKR.scss";
+@import "_pagePTV.scss";
