--- a/scss/_page3.scss
+++ b/scss/_page3.scss
@@ -18,6 +18,7 @@
       justify-content: center;
       align-items: center;
       color: #000000;
+      text-align: center;
     }
     p {
       font-size: 26px;
